--- a/style-login.css
+++ b/style-login.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: 'Segoe UI', sans-serif;
-  background: url('dark-water.jpg') no-repeat center center fixed;
+  background: url('images/login-water.jpg') no-repeat center center fixed;
   background-size: cover;
   color: white;
   position: relative;
